Fix saveToFile method